# easyvideotrans

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile-gpu-workload  Note.md  README.md  app.py  app_test.py  audio_remove.py  chattts.py  drive_fish_tts.py  inference.py  inference_test.py  pyproject.toml  pytvzhen-config.json  requirements.txt  run_debug.sh  supervisord.conf  test_app.py  warning_file.py  work_space.py  work_space_tbd.py
.github/workflows/: docker-build.yaml  docker-release.yaml  docker-workload-release.yaml  docker.yaml  easyvideotrans-pr-build.yaml  easyvideotrans-release.yaml  easyvideotrans-workloads-release.yaml  easyvideotrans.yaml  pytvzhen-web.yaml
appendix/: download_youtube_video.py
appendix/scripts/: voice_redo.py
appendix/templates/: index.html
celery_tasks/: celery_utils.py  tasks.py
configs/: celery-task-routes.json  celery.json  easyvideotrans.json  pytvzhen.json  supervisord.conf
data/workflow/: default_param_dict.json
doc/: api.md  change_log.md
example/: 1.json  2.json  paramDict.json
k8s/prod/: easyvideotrans-frontend.yaml  (+9 more)
lib/: dataset.py  utils.py
server/: app.py  work_space.py
src/: __init__.py  test_workload_client.py  workload_client.py  workload_client_test.py
templates/: index.html
tools/: audio_remove.py  merge_subtitle.py  merge_video_srt.py  trans_llm.py  voice_redo.py  warning_file.py
tools_tbd/: audio_remove.py  merge_subtitle.py  terms.json  trans_llm.py
workloads/: .dockerignore  pyproject.toml  requirements.txt  task_scheduler.py  task_scheduler_test.py
workloads/lib/: dataset.py  layers.py  nets.py  separator.py  srt.py
workloads/lib/audio_processing/: transcribe_audio.py
workloads/lib/fish_speech/: clean.py  conversation.py  engine.py
workloads/lib/fish_speech/modules/: autoregression.py  firefly.py  tokenizer.py
(+33 files in other folders)
