[project]
name = "pytvzhen-web"
version = "0.1.0"
description = "EasyVideoTrans - A video translation and voice synthesis application"
requires-python = ">=3.11"
dependencies = [
    "deepl==1.17.0",
    "edge-tts==6.1.10",
    "Flask==3.0.3",
    "moviepy==1.0.3",
    "openai==1.55.3",
    "openai-whisper==20231117",
    "prometheus_client==0.20.0",
    "prometheus-flask-exporter==0.23.0",
    "pytubefix @ git+https://github.com/sutro-planet/pytubefix.git@main",
    "requests==2.31.0",
    "scipy==1.12.0",
    "pika==1.3.2",
    "celery==5.4.0",
    "srt==3.4.1",
    "pydub==0.25.1",
    "pygtrans==1.5.3",
    "tenacity==8.3.0",
]

[project.optional-dependencies]
dev = [
    "flake8==7.0.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "flake8==7.0.0",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
