[project]
name = "pytvzhen-workloads"
version = "0.1.0"
description = "EasyVideoTrans GPU workloads for audio processing"
requires-python = ">=3.11"
dependencies = [
    "prometheus_client",
    "prometheus-flask-exporter",
    "librosa~=0.10.0",
    "matplotlib~=3.8.0",
    "opencv_python~=4.8.0",
    "resampy~=0.4.0",
    "tqdm~=4.66.0",
    "numpy~=1.26.4",
    "srt==3.4.1",
    "srt-deepl==0.9.1",
    "faster-whisper==1.1.1",
    "Flask==3.0.3",
    "soundfile>=0.12.1",
    "ctranslate2==4.5.0",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
]
